--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Eat-da-Burger</title>
-        <link rel="stylesheet" href="/assets/css/reset.css" type="text/css" />
+    <title>Headline Scraping</title>
+        <link rel="shortcut icon" href="images/newspaper.png">
+        <link rel="stylesheet" href="/public/css/reset.css" type="text/css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
         crossorigin="anonymous">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="/public/css/style.css" type="text/css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="/public/javascript/app.js"></script>
 </head>
 <body>
     {{{body}}}
