--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Headline Scraping</title>
         <link rel="shortcut icon" href="images/newspaper.png">
-        <link rel="stylesheet" href="/public/css/reset.css" type="text/css" />
+        <link rel="stylesheet" href="css/reset.css" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
         crossorigin="anonymous">
-		<link rel="stylesheet" href="/public/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="/public/javascript/app.js"></script>
+        <script src="javascript/app.js"></script>
 </head>
 <body>
     {{{body}}}
