article instructions fixed

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <h1>Headline Scraping</h1>
 
 <p>1. Click the "Articles" Button to Display Articles.</p>
-<p>2. Click on the Article to Add a Comment.</p>
+<p>2. Click on the Article's Title to Add a Comment.</p>
 
 <div class="modal fade" id="myModal">
     <div class="modal-dialog">
